# tum-scheduler

./: .env.docker  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker_fill_db.sh  empty_xml.txt  fc  ids.txt  output.txt  request_urls  schedular.lp  test.txt  tum_api_entpoints
frontend/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
frontend/src/: course_configuration.js  index.html  index.js
frontend/src/config/: renderViews.js  setViews.js
migrations/2024-02-08-141222_inital_migration/: down.sql  up.sql
migrations/2024-02-08-153558_add_semester_to_course/: down.sql  up.sql
migrations/2024-03-28-124529_adding_organizations/: down.sql  up.sql
resources/: api_docu.yaml  db_dump.dump  maxects_example.json  mincourses_example.json
src/: api.rs  db_setup.rs  main.rs  meilisearch.rs  schedular.rs  schema.rs  scraper.rs  tum_api.rs  utils.rs
src/api/: endpoints.rs
src/db/: course.rs  db_setup.rs  mod.rs
src/ip_schedular/: mod.rs
src/schedular/: course_selection.rs  mod.rs  scheduling_problem.rs  session.rs  settings.rs
src/scraper/: appointment.rs  course.rs  course_variant.rs  curriculum.rs  lecture.rs  organization.rs
src/tum_api/: appointment.rs  course.rs  course_basic_data.rs  course_description.rs  course_selection.rs  course_variant.rs  curriculum.rs  lecture.rs  mod.rs  organization.rs  subject_appointments.rs  tum_xml_node.rs
test_xmls/: appointment_multi_weekday.xml  appointments.xml  course.xml  course_variants.xml  course_variants2.xml  curricula.xml  knoten_response.txt
(+15 files in other folders)
