[package]
name = "tum-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.4", features = ["r2d2", "postgres", "uuid", "chrono"]}
reqwest = "0.11.24"
roxmltree = "0.19.0"
tokio = {version = "1.36.0", features = ['full']}
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
anyhow = '1.0.79'
thiserror = '1.0.56'
r2d2 = "0.8.10"
