[package]
name = "tum-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {version = "2.1.4", features = ["r2d2", "postgres", "uuid", "chrono"]}
reqwest = "0.11.24"
roxmltree = "0.19.0"
tokio = {version = "1.36.0", features = ['full']}
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
anyhow = '1.0.79'
thiserror = '1.0.56'
r2d2 = "0.8.10"
chrono = {version = "0.4.33" , features = ["serde"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
itertools = "0.12.1"
grb = {version = "1.3.0"}
actix-web = "4.5.1"
actix-files = "0.6.5"
serde = {version = "1.0.197" , features = ["derive"]}
serde_json = "1.0.114"
